# propensity-gbdt

./: LICENSE  MANIFEST.in  README.md  setup.cfg
src/propensitygbdt/data/: bscm.stan  scm_donor_selection_candidate_performance.xlsx  scm_donor_selection_candidate_units_data.xlsx
src/propensitygbdt/scm/: bayesian_scm.py  donor_selection.py
