[metadata]
name = propensitygbdt
version = 0.1.0
author = Frederico Guilherme Nogueira
author_email = frederico.nogueira@gmail.com
description = A causal inference toolkit for SCM, DiD and IPW. It uses Gradient Boosted Trees to estimate propensity scores and enforce common support by detecting and eliminating off-support control units. This pre-processing step ensures that the final effect estimation is more robust, credible, and less prone to bias.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
propensitygbdt =
    data/*.stan
    data/*.xlsx
